Fix dockerfile java option for java 17